--- a/static/style.css
+++ b/static/style.css
@@ -143,8 +143,12 @@
     margin-bottom: 15px;
   }
   .track-info {
-    text-align: center;
-    margin: 10px 0;
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
   }
   .track-info h3 {
     color: #664d03;
@@ -348,13 +352,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 2rem;
-    margin-bottom: 3rem;
+    gap: 1rem;
+    margin-bottom: 1rem;
     background-color: #fbeee0;
     border: 2px solid #422800;
     border-radius: 30px;
     box-shadow: #422800 4px 4px 0 0;
-    padding: 2rem;
+    padding: 0rem;
 }
 
 .now-playing {
@@ -372,6 +376,7 @@
     overflow: hidden;
     border: 2px solid #422800;
     box-shadow: #422800 4px 4px 0 0;
+    margin-top: 10px;
 }
 
 .rotating-album {
@@ -379,6 +384,7 @@
     height: 100%;
     object-fit: cover;
     animation: rotate 20s linear infinite;
+   
 }
 
 @keyframes rotate {
@@ -391,7 +397,7 @@
 }
 
 .qr-section h2 {
-    color: #422800;
+    color: #664d03;
     font-family: "Luckiest Guy", sans-serif;
     font-size: 2rem;
     margin-bottom: 1rem;
@@ -413,7 +419,7 @@
 }
 
 .upcoming-tracks h2 {
-    color: #422800;
+    color: #664d03;
     font-family: "Luckiest Guy", sans-serif;
     font-size: 2rem;
     margin-bottom: 1.5rem;
@@ -446,7 +452,7 @@
 @media (max-width: 768px) {
     .queue-display {
         flex-direction: column;
-        padding: 1rem;
+        padding: 0rem;
     }
 
     .album-container {
