--- a/static/queue.css
+++ b/static/queue.css
@@ -17,7 +17,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   margin-top: -40px;
+   margin-top: -70px;
+   margin-left: -60px; /* Adjusted to move it left */
  /* Moves it up on all screens */
 }
         .background-icon {
@@ -63,7 +64,9 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            margin-bottom: 60px;
+           
+            margin-top: 50px;
+            
         }
 
         .dice-logo {
@@ -119,12 +122,14 @@
             color: white;
             margin-bottom: 8px;
             line-height: 1.1;
+            margin-left:30px; /* Adjusted to move it left */
         }
 
         .track-info .artist {
             font-size: 24px;
             color: #4ecdc4;
             font-weight: 500;
+           margin-left: 30px;
         }
 
         .progress-container {
@@ -207,6 +212,8 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            
+           
         }
 
         .empty-queue {
